--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,6 +102,10 @@ header {
     background-color: lightcoral;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /* Main Content */
 main {
     background-color: lightblue;
