--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,12 +5,12 @@
 /* <weight>: Use a value from 200 to 700 */
 /* <uniquifier>: Use a unique and descriptive class name */
 
-.oswald-<uniquifier> {
+/* .oswald-<uniquifier> {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
-}
+} */
 
 .oswald-500 {
   font-family: "Oswald", sans-serif;
